consolidate simple audio alerts